# obsidian-brain

./: .canary--pre-commit  .gitignore  AGENTS.md  Agents.md  LICENSE  Makefile  README.md  install.ps1  install.sh  pyproject.toml
.canaries/: pre-commit.md
.claude/commands/: simplify-audit.md  swarm-test.md
.githooks/: post-commit  pre-commit
.github/workflows/: linux-test.yml  windows-smoke.yml
cli/: brain
docs/: CHANGELOG.md  CONTRIBUTING.md  README.md  canary.md  changelog.md  contributing-agents.md  contributing.md  plugins.md  specification.md  tooling.md  user-guide.md  user-reference.md
docs/architecture/: README.md  bounded-contexts.md  documentation-philosophy.md  overview.md  security.md
docs/canaries/: post-propagation.md  pre-commit.md
docs/changelog/: v0.1.0.md  v0.1.1.md  v0.10.0.md  v0.10.1.md  v0.10.2.md  v0.10.3.md  v0.11.0.md  v0.11.1.md  v0.11.10.md  v0.11.2.md  v0.11.3.md  v0.11.4.md  v0.11.5.md  v0.11.6.md  v0.11.7.md  v0.11.8.md  v0.11.9.md  v0.12.0.md  v0.12.1.md  (+281 more)
standards/: README.md
template-vault/: .brain-core  .gitignore  AGENTS.md  Agents.md
tests/: brain_test_support.py  conftest.py  test_bdd_check.py  test_bdd_compile_router.py  test_bdd_create.py  test_brain_cli.py  test_build_index.py  test_build_lexical_index.py  test_central_runtime_convergence.py  test_check.py  test_common.py  test_common_artefacts.py  test_common_file_lock.py  test_common_filesystem.py  test_common_frontmatter.py  test_common_list_artefacts.py  test_common_search.py  test_common_shell.py  test_common_slugs.py  test_common_vault.py  test_common_wikilinks.py  test_common_yaml.py  test_compile_colours.py  test_compile_router.py  test_config.py  test_config_home_isolation.py  test_config_state.py  test_configure.py  test_construct_benchmark_fixture.py  test_create.py  test_dispatch_vault_arg.py  test_doctor.py  test_doctor_machine.py  test_edit.py  test_evaluate_search.py  test_fix_links.py  test_init.py  test_install_core.py  test_install_script.py  test_install_script_vault_registry.py  (+57 more)
vault/: CLAUDE.md  router.md
(+614 files in other folders)
