[project]
name = "obsidian-brain"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
]

[tool.interrogate]
paths = ["src/brain-core/scripts"]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
fail-under = 60
verbose = 1

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["tests"]
pythonpath = [
    "src/brain-core/scripts",
    "src/brain-core/mcp",
]
